fixed z-index topic experts on ie7

--- a/public/stylesheets/ie7.css
+++ b/public/stylesheets/ie7.css
@@ -13,3 +13,4 @@ article > header .avatar-wrapper{text-align: center; z-index: 99;}
 .header-top{z-index: 99;}
 .comm-wrap > div > p{z-index: -1;}
 .private-msg p {z-index: 1;}
+.topic-avatars > li{float: right;}
